R4: set value of config_stableDeviceDisplayWidth/Height
Bug: 209592558
Test: adb shell dumpsys display | grep mStableDisplaySize
Change-Id: I76e835c695508295ad23538005bfa899efafbc01

--- a/raven/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/raven/overlay/frameworks/base/core/res/res/values/config.xml
@@ -292,6 +292,12 @@
     <item>283</item>
 </integer-array>
 
+     <!-- The stable device width and height in pixels. If these aren't set to a positive number
+          then the device will use the width and height of the default display the first time it's
+          booted.  -->
+    <integer name="config_stableDeviceDisplayWidth">1440</integer>
+    <integer name="config_stableDeviceDisplayHeight">3120</integer>
+
     <!-- Boolean indicating if restoring network selection should be skipped -->
     <!-- The restoring is handled by modem if it is true -->
     <bool translatable="false" name="skip_restoring_network_selection">true</bool>
