--- a/raven/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/raven/overlay/frameworks/base/core/res/res/values/config.xml
@@ -43,7 +43,9 @@
 
 
     <!-- Radius of the software rounded corners. -->
-    <dimen name="rounded_corner_radius">50px</dimen>
+    <dimen name="rounded_corner_radius">67px</dimen>
+    <dimen name="rounded_corner_radius_top">67px</dimen>
+    <dimen name="rounded_corner_radius_bottom">66px</dimen>
 
     <!-- Adjustment for software rounded corners since corners aren't perfectly round. -->
     <dimen name="rounded_corner_radius_adjustment">5px</dimen>
